chg: dev: update taxonomy_schemas and tests
